k8s/deployment_staging.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtfs-validator-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gtfs-validator-staging
  template:
    metadata:
      labels:
        app: gtfs-validator-staging
    spec:
      containers:
      - name: gtfs-validator-staging
        image: gcr.io/$PROJECT_ID/$IMAGE_GTFS_VALIDATOR:$GITHUB_SHA
      restartPolicy: Always
---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gtfs-validator-staging
  name: gtfs-validator-staging
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: gtfs-validator-staging
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtfs-validator-staging-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  tls:
    - hosts:
        - staging.gtfs-validator.mobilidade.rio
      secretName: gtfs-validator-staging-tls
  rules:
    - host: staging.gtfs-validator.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtfs-validator-staging
                port:
                  number: 80
